Split unit and integration tests into separate suites
This allows running unit tests with a different toolchain
than integration tests, which then allows upgrading
ErrorProne as unit tests are no longer run with JDK 8.

(using the upgraded ErrorProne in integration tests requires
some changes as well)